# Game

./: CMakeCache.txt  CMakeLists.txt  Game.cbp  Makefile  Runecraft.cbp  cmake_install.cmake  network.net
GameSource/: AutoAttackComponent.h  CameraController.h  Caster.h  DrawableTexture.h  Entity.h  FireBurstComponent.h  FireComponent.h  HitPointsComponent.h  InputController.h  Misc.h  Mutant.h  Ninja.h  Runecraft.cpp  Runecraft.h  ShieldComponent.h  SimpleAI.h  Spell.h  SpellSystem.h  States.h  TimeOutComponent.h  Totems.h  UrhoIncludeAll.h
ImageAnalyzer/: ExampleShapeDescriptors.h  GrayScaleImage.h  ImageAnalyzer.cpp  ImageAnalyzer.h  LinAlgExtended.cpp  LinAlgExtended.h  LineDrawer.cpp  LineDrawer.h  NeuralNetwork.h  Params.h  Randomizer.h  ShapeDescriptors.cpp  ShapeDescriptors.h
LinAlg/: linalg.h
Tests/: main.cpp  test.cpp
Text/Mapa/: mapa.uxf  theMap.uxf
Text/Mapa/Umlet/: umlet.desktop
Text/Tex/: Makefile  appendix.tex  benchmark.txt  bibliography.bib  bibliography.tex  chapter1.tex  chapter2.tex  chapter3.tex  conclusion.tex  introduction.tex  text.tex  thesis.ilg  thesis.tex  thesis.xmpdata
Text/Tex/ext/images/: algoschema.uxf
Training/: Constants.h  Networks.cpp  Networks.h  Training.cpp  Training.h  main.cpp  outdatedCode.txt
